2004-08-07  Bob Halley  <halley@dnspython.org>

	* (Version 1.3.2 released)

2004-08-04  Bob Halley  <halley@nominum.com>

	* dns/query.py: sending queries to a nameserver via IPv6 now
	works.
	
	* dns/inet.py (af_for_address): Add af_for_address(), which looks
	at a textual-form address and attempts to determine which address
	family it is.

	* dns/query.py: the default for the 'af' parameter of the udp(),
	tcp(), and xfr() functions has been changed from AF_INET to None,
	which causes dns.inet.af_for_address() to be used to determine the
	address family.  If dns.inet.af_for_address() can't figure it out,
	we fall back to AF_INET and hope for the best.

2004-07-31  Bob Halley  <halley@dnspython.org>

	* dns/rdtypes/ANY/NSEC.py (NSEC.from_text): The NSEC text format
	does not allow specifying types by number, so we shouldn't either.

	* dns/renderer.py: the renderer module didn't import random,
	causing an exception to be raised if a query id wasn't provided
	when a Renderer was created.

	* dns/resolver.py (Resolver.query): the resolver wasn't catching
	dns.exception.Timeout, so a timeout erroneously caused the whole
	resolution to fail instead of just going on to the next server.

2004-06-16  Bob Halley  <halley@dnspython.org>

	* dns/rdtypes/ANY/LOC.py (LOC.from_text): LOC milliseconds values
	were converted incorrectly if the length of the milliseconds
	string was less than 3.

2004-06-06  Bob Halley  <halley@dnspython.org>

	* (Version 1.3.1 released)

2004-05-22  Bob Halley  <halley@dnspython.org>

	* dns/update.py (Update.delete): We erroneously specified a
	"deleting" value of dns.rdatatype.NONE instead of
	dns.rdataclass.NONE when the thing being deleted was either an
	Rdataset instance or an Rdata instance.

	* dns/rdtypes/ANY/SSHFP.py: Added support for the proposed SSHFP
	RR type.

2004-05-14  Bob Halley  <halley@dnspython.org>

	* dns/rdata.py (from_text): The masterfile reader did not
	accept the unknown RR syntax when used with a known RR type.
