@@ -1,8 +1,14 @@
+2004-08-14  Bob Halley  <halley@dnspython.org>
+
+	* dns/message.py (Message.find_rrset): find_rrset() now uses an
+	index, vastly improving the from_wire() performance of large
+	messages such as zone transfers.
+
 2004-08-07  Bob Halley  <halley@dnspython.org>
 
 	* (Version 1.3.2 released)
 
-2004-08-04  Bob Halley  <halley@nominum.com>
+2004-08-04  Bob Halley  <halley@dnspython.org>
 
 	* dns/query.py: sending queries to a nameserver via IPv6 now
 	works.
